[package]
name = "wavly"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.30.0"
rayon = "1"
symphonia = { version = "0.5", features = ["all-formats", "all-codecs"] }
stratum-dsp = "1.0"
walkdir = "2"

[dev-dependencies]
hound = "3"
tempfile = "3"
